add keycloak login and outsource app.properties...